--- a/index.html
+++ b/index.html
@@ -16,39 +16,45 @@
         <div style="display: flex">
           <div class="field m-2">
             <label class="label">Nome:</label>
-            <input class="input" id="name" type="text" style="width: 300px;" />
+            <input class="input" id="name" type="text" style="width: 300px" />
           </div>
           <div class="field m-2">
             <label class="label">Email:</label>
-            <input class="input" id="email" type="text" style="width: 300px;" />
+            <input class="input" id="email" type="text" style="width: 300px" />
           </div>
           <div class="field m-2">
             <label class="label">CEP:</label>
             <div style="display: flex; align-items: center">
-              <input class="input" id="cep" type="text" style="width: 130px;" />
-              <button class="button ml-2 is-small" id="verificar">Verificar</button>
+              <input class="input" id="cep" type="text" style="width: 130px" />
+              <button class="button ml-2 is-small" id="verificar">
+                Verificar
+              </button>
             </div>
           </div>
-          <hr>
+          <hr />
         </div>
-        
+
         <button class="button m-2" id="button" style="width: 100px">
           Enviar
         </button>
       </div>
-      <div class="card m-3" style="width: 300px;">
-        <div class="card-content">
+      <div>
+        <div class="card m-3" style="width: 300px; position: absolute">
+          <div class="card-content">
             <div class="content">
-                <label class="label"> Estado: </label>
-                <label class="label is-small" id="uf"></label>
-                <label class="label"> Cidade: </label>
-                <label class="label is-small" id="cidade"></label>
-                <label class="label"> Bairro: </label>
-                <label class="label is-small" id="bairro"></label>
-                <label class="label"> Rua: </label>
-                <label class="label is-small" id="rua"></label>
+              <label class="label"> Estado: </label>
+              <label class="label is-small" id="uf"></label>
+              <label class="label"> Cidade: </label>
+              <label class="label is-small" id="cidade"></label>
+              <label class="label"> Bairro: </label>
+              <label class="label is-small" id="bairro"></label>
+              <label class="label"> Rua: </label>
+              <label class="label is-small" id="rua"></label>
             </div>
+          </div>
         </div>
+        <img width="1400" height="600" id="map"
+        src="">
       </div>
     </div>
 
